# Hackathon_Project

./: .gitignore  README.dataset.txt  README.roboflow.txt  center.ipynb  pyproject.toml
src/: augment_generative.py  future_vision.py  generate.py  predict.py  simulate_hazard.py  split_data.py  train.py
test/labels/: 101_jpg.rf.ac03d0fc729e1fbbafb070d2ea30c9d9.txt  111_jpg.rf.019e079da16b88cda78be0fc63c5de9c.txt  114_jpg.rf.231877c4cda184b915d7bbce1fad65a8.txt  117_jpg.rf.88fe8affec70765d35e71369f1853158.txt  117_jpg.rf.f1f690cbe9439f8606ae3f441fd3dd60.txt  121_jpg.rf.c99f70bf6a3130d9e61ac02686779392.txt  128_jpg.rf.ff27168c3437b5fc7653f15c50e72661.txt  135_jpg.rf.9d0d6f3e6bc848cebb6f2ea6a239f2c9.txt  140_jpg.rf.87aa6b1c8edcf7630fc48a85ff7c4389.txt  143_jpg.rf.b0ddf6245100a94a7e59ceca8c769c73.txt  146_jpg.rf.39b1b40866fa69dac66fef452bae9785.txt  19_jpg.rf.9ce8541d8790f606e40a938566fcef51.txt  332_jpg.rf.3ff15f73530c6b702d5fbd1d06e9f010.txt  336_jpg.rf.6cccf9caf40a7018a1f4fd01efd28026.txt  345_jpg.rf.b0ace9d98ad38be091997f74e0c99b33.txt  37_jpg.rf.53b66a93ec05e29da86ec4dfe4b7407d.txt  37_jpg.rf.fcb3d7373721a8d2bbfa8e3e439948ad.txt  41_jpg.rf.8f95f446c589335f9ae1b642af1c4e85.txt  43_jpg.rf.2ad0f02f252cf714af7bad56a410eb9c.txt  49_jpg.rf.3dacb170196754b486569e4ba31fba7e.txt  53_jpg.rf.481cbfbd870f1011ee96ba12ae3a6ce8.txt  57_jpg.rf.fa172a0f95da059115a5fa5ac8f39485.txt  62_jpg.rf.eceed12b35430e5e35aeff38d7f74180.txt  77_jpg.rf.1609326a1d9f74ce6575f14b9d36e516.txt  78_jpg.rf.7d182336782a1074ce91b2a1e70c2c53.txt  85_jpg.rf.c892a1a11b7d73a401d6491430fdbb1b.txt  (+168 more)
(+384 files in other folders)
