[project]
name = "road-hazard-vision"
version = "0.1.0"
description = "AI-powered road hazard detection with shadow-erasing and spatial masking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "albumentations>=1.3.1",
    "pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"